# norn_fulltext

./: LICENSE  README.md  add_fulltext_to_db.py  check_corpera.py  check_corpora.py  corpus_properties.txt  get_data.ipynb  pyproject.toml
archive/: Add_dhlabid_to_konsensuskorpus.ipynb  Inspect_korpus.ipynb  add_dhlabid.ipynb
metadata/: 1800-1839_metadata.xlsx  1840-1869_metadata.xlsx  konsensus_korpus_annotated_with_metadata.xlsx
texts/1800-1839/: 100614911.txt  100615228.txt  100615801.txt  100615808.txt  100615913.txt  100616628.txt  100616675.txt  100618743.txt  100619946.txt  100623920.txt  100624852.txt  100625446.txt  100625936.txt  100627115.txt  100627176.txt  100627227.txt  100627360.txt  100627377.txt  100627379.txt  100627381.txt  100627570.txt  100627581.txt  100627590.txt  100627704.txt  100627777.txt  100628186.txt  100628222.txt  100628262.txt  100628326.txt  100628367.txt  100628402.txt  100628433.txt  100628477.txt  100628617.txt  100629215.txt  100629320.txt  100629422.txt  100629539.txt  100629543.txt  100630494.txt  (+57 more)
texts/1840-1869/: 100484948.txt  100614143.txt  100614175.txt  100614245.txt  100614693.txt  100614877.txt  100614914.txt  100614922.txt  100615157.txt  100615227.txt  100615665.txt  100615791.txt  100615792.txt  100615837.txt  100615854.txt  100615987.txt  100616215.txt  100616244.txt  100616265.txt  100616374.txt  100616400.txt  100616401.txt  100618350.txt  100618374.txt  100618427.txt  100618479.txt  100618503.txt  100618538.txt  100618556.txt  100618563.txt  100618698.txt  100618711.txt  100618741.txt  100618749.txt  100618826.txt  (+186 more)
(+139 files in other folders)
